--- a/app/local.properties
+++ b/app/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 20 14:47:07 CST 2016
-sdk.dir=D\:\\AndroidSDK\\SDK\\sdk
+#Wed May 04 21:24:30 CST 2016
+ndk.dir=/Users/yanguoqiang/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/yanguoqiang/Library/Android/sdk
