滤镜加基础美颜

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -272,7 +272,8 @@
 
         <activity
             android:name=".editor.PhotoDynamicActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/ActivityCameraTheme"/>
 
         <activity
             android:name=".setting.watermark.management.TemplateManagemenActivity"
