拍照裁剪类别初始化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,7 +107,8 @@
             android:theme="@style/ActivityCameraTheme" />
         <activity
             android:name=".editor.PhotoShareActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/ActivityCameraTheme"/>
         <activity
             android:name=".camera.ActivityCamera"
             android:launchMode="singleTask"
