--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.putao.camera"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 14
-        versionName "1.2.5"
+        versionCode 15
+        versionName "1.2.6"
         multiDexEnabled true
         ndk {
             moduleName "gpuimage-library"
@@ -34,7 +34,7 @@ android {
     }
 
     signingConfigs {
-        debug {
+        release {
             keyAlias 'putao_paipai'
             keyPassword '123456'
             storeFile file('../putao_paipai_keystore.jks')
@@ -42,15 +42,15 @@ android {
         }
     }
     buildTypes {
-        /* release {
-             shrinkResources true
-             minifyEnabled false
-             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-             signingConfig signingConfigs.release
-         }*/
+        release {
+            shrinkResources true
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
         debug {
             shrinkResources true
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
     //产品渠道配置
