--- a/app/build.gradle
+++ b/app/build.gradle
@@ -268,4 +268,5 @@ dependencies {
     compile files('libs/xstream-1.4.7.jar')
     compile files('libs/MobCommons-2016.0406.1915.jar')
     compile files('libs/jpush-android-2.1.3.jar')
+//    compile group: 'org.bytedeco', name: 'javacv', version: '1.1'
 }
